--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kbs-dsl-resolver",
-  "version": "2.0.7",
+  "version": "2.1.0",
   "description": "",
   "main": "./dist/index.js",
   "scripts": {
@@ -21,12 +21,14 @@
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.7",
     "@babel/parser": "^7.23.0",
     "@babel/plugin-transform-runtime": "^7.22.15",
     "@babel/preset-env": "^7.22.20",
     "@babel/preset-typescript": "^7.23.0",
     "@types/wechat-miniprogram": "^3.4.4",
     "babel-loader": "^9.1.3",
+    "core-js": "^3.38.1",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   }
